--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -58,6 +58,9 @@
                         <li sec:authorize="isAuthenticated()">
                             <a class="dropdown-item" th:href="@{/user/profile}">Profile</a>
                         </li>
+                        <li sec:authorize="hasRole('ROLE_ADMIN')">
+                            <a class="dropdown-item" th:href="@{/admin/logins}">Login History</a>
+                        </li>
                         <li sec:authorize="isAuthenticated()">
                             <form th:action="@{/logout}" method="post" class="d-inline">
                                 <button class="dropdown-item" type="submit">Logout</button>
