--- a/src/main/resources/templates/order/paypal_cancel.html
+++ b/src/main/resources/templates/order/paypal_cancel.html
@@ -5,10 +5,11 @@
     <title>Payment Cancelled</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
-<div th:replace="fragments/navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container mt-5">
     <h2 class="mb-3">Payment Cancelled</h2>
