--- a/src/main/resources/templates/store/toys.html
+++ b/src/main/resources/templates/store/toys.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Browse Toys - ToyStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
-<div th:replace="fragments/navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <section class="text-center d-flex align-items-center justify-content-center"
          th:style="|background: url('@{/images/toy_banner.png}') center center / cover no-repeat; min-height: 30vh; text-shadow: 2px 2px 8px rgba(0,0,0,0.7);|">
